# run_coach

./: .gitignore  CLAUDE.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4f7102b89d74_initial_schema.py
backend/src/runcoach/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/runcoach/models/: __init__.py  chat_message.py  goal.py  notification.py  strava_activity.py  strava_token.py  training_plan.py  user.py  user_memory_summary.py  user_profile.py  workout.py  workout_completion.py  workout_edit.py
backend/src/runcoach/routers/: __init__.py  auth.py
backend/src/runcoach/schemas/: __init__.py  auth.py
backend/src/runcoach/services/: __init__.py  auth.py
backend/src/runcoach/utils/: __init__.py
backend/tests/: __init__.py  test_app.py  test_auth.py
